objects/CSS_JobEventTemporary__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>IF( Key__c = &apos;AccountCodes&apos;,  Attribute2__c + &apos; &apos; +  Attribute3__c, &apos;&apos;)</formula>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a generic field to mark the records as active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute10__c</fullName>
        <label>Attribute10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute11__c</fullName>
        <label>Attribute11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute12__c</fullName>
        <label>Attribute12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Description__c</fullName>
        <label>Circuit Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Location__c</fullName>
        <label>Comp Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effect__c</fullName>
        <label>Effect</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <label>Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpireDateTime__c</fullName>
        <label>ExpiryDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FMI__c</fullName>
        <label>FMI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Description__c</fullName>
        <label>Fault Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSONResponse__c</fullName>
        <label>JSONResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobOrder__c</fullName>
        <label>JobOrder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyType__c</fullName>
        <label>KeyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESN</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>Symptom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp__c</fullName>
        <label>Lamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RawData__c</fullName>
        <label>RawData</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPN__c</fullName>
        <label>SPN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SRT_Access_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>QSOL</fullName>
                </value>
                <value>
                    <fullName>SRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>TRPs</fullName>
                </value>
                <value>
                    <fullName>TSBs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSS_JobEventTemporary</label>
    <listViews>
        <fullName>Custom_Code</fullName>
        <columns>NAME</columns>
        <columns>Attribute5__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Attribute1__c</columns>
        <columns>Attribute2__c</columns>
        <columns>Attribute3__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key__c</field>
            <operation>equals</operation>
            <value>MarketingApplicationCodes</value>
        </filters>
        <label>Custom Code</label>
    </listViews>
    <nameField>
        <label>CSS_JobEventTemporary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_JobEventTemporaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>